--- a/less/global.less
+++ b/less/global.less
@@ -5,6 +5,7 @@ html { font-size: 62.5%; }
 
 html, body {
   .font-body;
+  height: 100%;
   color: @main-font-color;
 }
 
@@ -31,4 +32,13 @@ li { font-size: 1.4rem; }
   width: 100%;
   margin: 0 auto;  
 }
+
+.grid {
+  display: grid;
+  grid-template-columns: 10% 90%;
+  grid-gap: 10px;
+}
+
+
+
 
