--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,20 +3,27 @@ nav {
   background: @nav-bg;
   width: 100%;
   display: flex;
-  flex-direction: column;
   border-bottom: 1px solid @nav-border;
   box-shadow: 0px 3px 10px 1px @nav-border;
+  z-index: 1;
   .sticky-top(0);
   h1 {
-    align-self: center;
+    align-self: flex-start;
     padding: 10px;
+    width: 100%;
     @media @phone-small {
       font-size: 10vw;
+    }
+    a {
+      text-decoration: none;
+      color: @apple-red;
     }
   }
   ul {
     display: flex;
-    justify-content: center;
+    align-self: center;
+    justify-content: flex-end;
+    min-width: 200px;
     @media @phone-small {
       flex-direction: column;
       text-align: center;
@@ -24,8 +31,9 @@ nav {
       margin-bottom: 17px;
     }
     li {
-      padding: 5px 0 10px;
-      margin: 0 0 1px 0;
+      padding: 5px 0;
+      margin: 0 0 0 0;
+      .border-style;
       @media @phone {
         font-size: 1.2rem;
         margin: 0;
@@ -34,9 +42,13 @@ nav {
         padding: 10px;
         margin: 5px;
       }
+      .btn {
+        .btn(@nav-bg; @nav-font; 100%; 0px; 1.8rem; 2.4px 15px 2.4px 10px);
+        margin: 0 5px 0 0;
+      }
       a {
         padding: 10px 20px;
-        .link(@nav-font;@nav-bg;);
+        // .link(@nav-font;@nav-bg;);
         @media @phone {
           padding: 10px 10px;
         }
