--- a/less/home-page.less
+++ b/less/home-page.less
@@ -80,7 +80,6 @@ section {
         text-align: center; 
       }
       .icon { 
-        background-color: @sea-shell;
         grid-column-start: 1;
         grid-column-end: 1;
         grid-row-start: 1;
@@ -94,7 +93,6 @@ section {
         grid-row-start: 1;
         grid-row-end: 1;
 
-        background-color: @sea-shell;
         font-size: 2.2rem;
 
       }
@@ -104,9 +102,12 @@ section {
         grid-row-start: 2;
         grid-row-end: 2;
 
-        background-color: @sea-shell;
         font-size: 2.2rem;
 
+      }
+      #mapid { 
+        height: 333px; 
+        font-size: 1rem;
       }
     }
   
