readme link, small styling changes

--- a/less/global.less
+++ b/less/global.less
@@ -36,9 +36,10 @@ li { font-size: 1.4rem; }
 .grid {
   display: grid;
   grid-template-columns: 10% 90%;
-  grid-gap: 10px;
+  grid-gap: 50px 10px;
+  max-width: 800px;
+  margin: 0 auto;
 }
-
 
 
 
