--- a/css/index.css
+++ b/css/index.css
@@ -176,7 +176,9 @@ li {
 .grid {
   display: grid;
   grid-template-columns: 10% 90%;
-  grid-gap: 10px;
+  grid-gap: 50px 10px;
+  max-width: 800px;
+  margin: 0 auto;
 }
 nav {
   background: #ffffff;
@@ -184,7 +186,7 @@ nav {
   display: flex;
   border-bottom: 1px solid #454A59;
   box-shadow: 0px 3px 10px 1px #454A59;
-  z-index: 1;
+  z-index: 5;
   position: sticky;
   top: 0;
 }
@@ -314,6 +316,38 @@ footer {
   border-left: 5px solid #bd3833;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.75);
 }
+.splash .btn {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  background-color: #F1F1F1;
+  color: #bd3833;
+  border-radius: 0px;
+  font-size: 1.8rem;
+  font-weight: bolder;
+  text-align: center;
+  width: 25%;
+  min-width: 100px;
+  padding: 8px 10px;
+  border: 0;
+  text-decoration: none;
+  cursor: pointer;
+  border-left: 5px solid #bd3833;
+  z-index: 1;
+}
+.splash .btn:hover {
+  color: #F1F1F1;
+  background-color: #bd3833;
+  -webkit-transition-duration: 0.75s;
+  -moz-transition-duration: 0.75s;
+  transition-duration: 0.75s;
+}
+@media (max-width: 500px) {
+  .splash .btn {
+    width: 100%;
+    padding: 20px;
+  }
+}
 section {
   display: grid;
   width: 100%;
@@ -344,7 +378,7 @@ section .leading-arrow {
 }
 .home .luncher-info .icon {
   align-self: center;
-  font-size: 4rem;
+  font-size: 6rem;
 }
 .home .luncher-info .text {
   font-size: 2.2rem;
@@ -354,28 +388,27 @@ section .leading-arrow {
   color: #232323;
   position: relative;
   padding: 20%;
+  display: grid;
+  grid-template-columns: 100%;
+  grid-gap: 10px;
 }
 .home .school-map p {
   text-align: center;
 }
-.home .school-map .icon {
-  grid-column-start: 1;
-  grid-column-end: 1;
-  grid-row-start: 1;
-  grid-row-end: span 2;
-  align-self: center;
-  font-size: 4rem;
+.home .school-map p .icon {
+  font-size: 6rem;
+  padding: 0 0 20px 0;
 }
 .home .school-map .description {
-  grid-column-start: 2;
-  grid-column-end: 2;
+  grid-column-start: 1;
+  grid-column-end: 1;
   grid-row-start: 1;
   grid-row-end: 1;
   font-size: 2.2rem;
 }
 .home .school-map .map {
-  grid-column-start: 2;
-  grid-column-end: 2;
+  grid-column-start: 1;
+  grid-column-end: 1;
   grid-row-start: 2;
   grid-row-end: 2;
   font-size: 2.2rem;
@@ -383,36 +416,4 @@ section .leading-arrow {
 .home .school-map #mapid {
   height: 333px;
   font-size: 1rem;
-}
-.home .btn {
-  display: flex;
-  justify-content: center;
-  margin: 0 auto;
-  background-color: #F1F1F1;
-  color: #bd3833;
-  border-radius: 0px;
-  font-size: 1.8rem;
-  font-weight: bolder;
-  text-align: center;
-  width: 50%;
-  min-width: 100px;
-  padding: 8px 10px;
-  border: 0;
-  text-decoration: none;
-  cursor: pointer;
-  border-left: 5px solid #bd3833;
-  z-index: 1;
-}
-.home .btn:hover {
-  color: #F1F1F1;
-  background-color: #bd3833;
-  -webkit-transition-duration: 0.75s;
-  -moz-transition-duration: 0.75s;
-  transition-duration: 0.75s;
-}
-@media (max-width: 500px) {
-  .home .btn {
-    width: 100%;
-    padding: 20px;
-  }
 }
