--- a/css/index.css
+++ b/css/index.css
@@ -135,6 +135,7 @@ table {
 }
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 html,
 body {
@@ -173,22 +174,37 @@ li {
   width: 100%;
   margin: 0 auto;
 }
-.grid {
+.grid-col-1 {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-gap: 10px;
+}
+.grid-col-2 {
   display: grid;
   grid-template-columns: 10% 90%;
   grid-gap: 50px 10px;
   max-width: 800px;
   margin: 0 auto;
 }
+.grid-col-3 {
+  display: grid;
+  grid-template-columns: 10% 80% 10%;
+  grid-gap: 10px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+.grid-col-4 {
+  display: grid;
+  grid-template-columns: 10% 40% 10% 40%;
+  grid-gap: 10px;
+  max-width: 800px;
+  margin: 0 auto;
+}
 nav {
-  background: #ffffff;
   width: 100%;
   display: flex;
-  border-bottom: 1px solid #454A59;
-  box-shadow: 0px 3px 10px 1px #454A59;
   z-index: 5;
-  position: sticky;
-  top: 0;
+  position: fixed;
 }
 nav h1 {
   align-self: flex-start;
@@ -202,7 +218,8 @@ nav h1 {
 }
 nav h1 a {
   text-decoration: none;
-  color: #bd3833;
+  color: #ffffff;
+  text-shadow: 1px 1px 5px black;
 }
 nav ul {
   display: flex;
@@ -222,6 +239,7 @@ nav ul li {
   padding: 5px 0;
   margin: 0 0 0 0;
   border-left: 5px solid #bd3833;
+  text-shadow: 1px 1px 5px black;
 }
 @media (max-width: 500px) {
   nav ul li {
@@ -236,8 +254,8 @@ nav ul li {
   }
 }
 nav ul li .btn {
-  background-color: #ffffff;
-  color: #bd3833;
+  background-color: rgba(255, 255, 255, 0);
+  color: #ffffff;
   border-radius: 0px;
   font-size: 1.8rem;
   font-weight: bolder;
@@ -251,8 +269,8 @@ nav ul li .btn {
   margin: 0 5px 0 0;
 }
 nav ul li .btn:hover {
-  color: #ffffff;
-  background-color: #bd3833;
+  color: #bd3833;
+  background-color: #ffffff;
   -webkit-transition-duration: 0.75s;
   -moz-transition-duration: 0.75s;
   transition-duration: 0.75s;
@@ -281,15 +299,15 @@ nav ul li a {
   }
 }
 footer {
-  color: #81848E;
-  background: #F6F6F6;
+  color: #9d6a4f;
+  background: #bd3833;
   padding: 20px 0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .splash {
-  height: 90%;
+  height: 99%;
 }
 .splash .splash-image {
   background-image: url("../assets/img/6057054938_d952659baa_o.jpg");
@@ -298,12 +316,18 @@ footer {
   background-size: cover;
   height: 100%;
   position: relative;
-  filter: brightness(75%) contrast(50%);
+  opacity: 0.92;
+  filter: brightness(100%) contrast(90%);
+}
+.splash .splash-image .splash-gradient {
+  background: linear-gradient(#000000, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
+  background-attachment: fixed;
+  height: 100%;
 }
 .splash .tagline {
   position: absolute;
   left: 0;
-  top: 50%;
+  top: 45%;
   width: 100%;
   text-align: center;
   color: #bd3833;
@@ -348,12 +372,13 @@ footer {
     padding: 20px;
   }
 }
-section {
+section a.divider {
   display: grid;
   width: 100%;
   margin-top: -3px;
+  text-decoration: none;
 }
-section .leading-arrow {
+section a.divider .leading-arrow {
   background-color: #232323;
   color: #ffffff;
   font-size: 5rem;
@@ -361,6 +386,10 @@ section .leading-arrow {
   border-radius: 28px;
   border: 2px solid #232323;
   z-index: 3;
+}
+section a.divider .leading-arrow:hover {
+  transform: scale(1.25);
+  transition-duration: 0.5s;
 }
 .home {
   display: block;
@@ -375,22 +404,52 @@ section .leading-arrow {
 }
 .home .luncher-info p {
   text-align: center;
+  align-self: center;
 }
 .home .luncher-info .icon {
-  align-self: center;
   font-size: 6rem;
 }
 .home .luncher-info .text {
   font-size: 2.2rem;
 }
+.home .luncher-info .btn {
+  grid-column: span 2;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0);
+  color: #ffffff;
+  border-radius: 0px;
+  font-size: 1.8rem;
+  font-weight: bolder;
+  text-align: center;
+  width: 33%;
+  min-width: 100px;
+  padding: 8px 10px;
+  border: 0;
+  text-decoration: none;
+  cursor: pointer;
+  border-left: 5px solid #bd3833;
+  z-index: 1;
+}
+.home .luncher-info .btn:hover {
+  color: #bd3833;
+  background-color: #ffffff;
+  -webkit-transition-duration: 0.75s;
+  -moz-transition-duration: 0.75s;
+  transition-duration: 0.75s;
+}
+@media (max-width: 500px) {
+  .home .luncher-info .btn {
+    width: 100%;
+    padding: 20px;
+  }
+}
 .home .school-map {
-  background-color: #F6F7F8;
-  color: #232323;
+  background-color: #ffec86;
+  color: #e54a48;
   position: relative;
-  padding: 20%;
-  display: grid;
-  grid-template-columns: 100%;
-  grid-gap: 10px;
+  padding: 10% 0 5%;
 }
 .home .school-map p {
   text-align: center;
@@ -414,6 +473,38 @@ section .leading-arrow {
   font-size: 2.2rem;
 }
 .home .school-map #mapid {
-  height: 333px;
+  height: 400px;
   font-size: 1rem;
+}
+.home .contact {
+  background-color: #ae9d27;
+  color: #ffffff;
+  padding: 10% 20%;
+}
+.home .contact .grid-col-4 {
+  align-items: center;
+}
+.home .contact .grid-col-4 h3 {
+  grid-column: span 3;
+  text-align: center;
+  color: #ffffff;
+}
+.home .contact .grid-col-4 .icon,
+.home .contact .grid-col-4 .social {
+  font-size: 4rem;
+  text-align: center;
+}
+.home .contact .grid-col-4 .icon {
+  grid-column: 1;
+}
+.home .contact .grid-col-4 .text {
+  grid-column: 2;
+  font-size: 2.2rem;
+}
+.home .contact .grid-col-4 .social {
+  grid-column: 3;
+}
+.home .contact .grid-col-4 a {
+  color: #ffffff;
+  text-align: center;
 }
