--- a/less/global.less
+++ b/less/global.less
@@ -1,7 +1,7 @@
 // General Styles
 * { box-sizing: border-box; }
 
-html { font-size: 62.5%; }
+html { font-size: 62.5%;  scroll-behavior: smooth; }
 
 html, body {
   .font-body;
@@ -33,10 +33,30 @@ li { font-size: 1.4rem; }
   margin: 0 auto;  
 }
 
-.grid {
+
+.grid-col-1 {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-gap: 10px;
+}
+.grid-col-2 {
   display: grid;
   grid-template-columns: 10% 90%;
   grid-gap: 50px 10px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+.grid-col-3 {
+  display: grid;
+  grid-template-columns: 10% 80% 10%;
+  grid-gap: 10px;
+  max-width: 800px;
+  margin: 0 auto;
+}
+.grid-col-4 {
+  display: grid;
+  grid-template-columns: 10% 40% 10% 40%;
+  grid-gap: 10px;
   max-width: 800px;
   margin: 0 auto;
 }
