--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,6 +1,6 @@
 // Home Content
 .splash {
-  height: 90%;
+  height: 99%;
   .splash-image {
     background-image: url("../assets/img/6057054938_d952659baa_o.jpg");
     background-position: center;
@@ -8,12 +8,18 @@
     background-size: cover;
     height: 100%;
     position: relative;
-    filter: brightness(75%) contrast(50%);
+    opacity: 0.92;
+    filter: brightness(100%) contrast(90%);
+    .splash-gradient {
+      background: @splash-bg-gradient;
+      background-attachment: fixed;
+      height: 100%;
+    }
   }
   .tagline {
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 45%;
     width: 100%;
     text-align: center;
     color: @apple-red;
@@ -31,16 +37,17 @@
     display: flex;
     justify-content: center;
     margin: 0 auto;
-    .btn(@sea-shell; @apple-red; 25%; 0px; 1.8rem);
+    .btn(@sea-shell; @apple-red; @sea-shell; 25%; 0px; 1.8rem);
     .border-style;
     z-index: 1;
   }
 }
 
-section {
+section a.divider {
   display: grid;
   width: 100%;
   margin-top: -3px;
+  text-decoration: none;
   .leading-arrow {
     background-color: @dark;
     color: @white;
@@ -49,6 +56,10 @@ section {
     border-radius: 28px;
     border: 2px solid @dark;
     z-index: 3;
+    &:hover {
+      transform: scale(1.25);
+      transition-duration: 0.5s;
+    }
   }
 }
 
@@ -57,67 +68,100 @@ section {
   display: block;
   max-width: unset;
   width: 100%;
-  
-    
-    .luncher-info {
-      background-color: @dark;
-      color: @porcelain;
-      position: relative;
-      padding: 20%;
+  .luncher-info {
+    background-color: @dark;
+    color: @porcelain;
+    position: relative;
+    padding: 20%;
 
-      p {
-        text-align: center; 
-      }
-      .icon { 
-        
-        align-self: center;
+    p {
+      text-align: center;
+      align-self: center; 
+    }
+    .icon { 
+      font-size: 6rem;
+    }
+    .text {
+      font-size: 2.2rem;
+    }
+    .btn {
+      grid-column: span 2;
+      display: flex;
+      justify-content: center;
+      margin: 0 auto;
+      .btn(@clear-color; @white; @apple-red; 33%; 0px; 1.8rem);
+      .border-style;
+      z-index: 1;
+    }
+  }
+  .school-map {
+    background-color: @apple-yellow;
+    color: @apple-pink;
+    position: relative;
+    padding: 10% 0 5%;
+    p {
+      text-align: center; 
+      .icon {
         font-size: 6rem;
+        padding: 0 0 20px 0;
+      }
+    }
+    .description {
+      grid-column-start: 1;
+      grid-column-end: 1;
+      grid-row-start: 1;
+      grid-row-end: 1;
+      font-size: 2.2rem;
+    }
+    .map {
+      grid-column-start: 1;
+      grid-column-end: 1;
+      grid-row-start: 2;
+      grid-row-end: 2;
+      font-size: 2.2rem;
+    }
+    #mapid { 
+      height: 400px; 
+      font-size: 1rem;
+    }
+  }
+  .contact {
+    background-color: @apple-green;
+    color: @white;
+    padding: 10% 20%;
+    .grid-col-4 {
+      align-items: center;
+      h3 {
+        grid-column: span 3;
+        text-align: center;
+        color: @white;
+      }
+
+      .icon, .social {
+        font-size: 4rem;
+        text-align: center;
+        
+      }
+      .icon {
+        grid-column: 1;
       }
       .text {
+        grid-column: 2;
         font-size: 2.2rem;
+      }
+      .social {
+        grid-column: 3;
+      }
+      a {
+        color: @white;
+        text-align: center;
       }
       
+      
     }
-    .school-map {
-      background-color: @porcelain;
-      color: @dark;
-      position: relative;
-      padding: 20%;
-      display: grid;
-      grid-template-columns: 100%;
-      grid-gap: 10px;
+    
+  }
 
-      p {
-        text-align: center; 
-        .icon {
-          font-size: 6rem;
-          padding: 0 0 20px 0;
-        }
-      }
-      .description {
-        grid-column-start: 1;
-        grid-column-end: 1;
-        grid-row-start: 1;
-        grid-row-end: 1;
-
-        font-size: 2.2rem;
-
-      }
-      .map {
-        grid-column-start: 1;
-        grid-column-end: 1;
-        grid-row-start: 2;
-        grid-row-end: 2;
-
-        font-size: 2.2rem;
-
-      }
-      #mapid { 
-        height: 333px; 
-        font-size: 1rem;
-      }
-    }
-  
 
 
 
