styling newsletter and mobile

--- a/less/global.less
+++ b/less/global.less
@@ -56,7 +56,7 @@ li { font-size: 1.4rem; }
 .grid-col-4 {
   display: grid;
   grid-template-columns: 10% 40% 10% 40%;
-  grid-gap: 10px;
+  // grid-gap: 10px; // This was causing horiz scrollbar issues
   max-width: 800px;
   margin: 0 auto;
 }
