--- a/css/index.css
+++ b/css/index.css
@@ -196,24 +196,29 @@ li {
 .grid-col-4 {
   display: grid;
   grid-template-columns: 10% 40% 10% 40%;
-  grid-gap: 10px;
   max-width: 800px;
   margin: 0 auto;
 }
 nav {
   width: 100%;
   display: flex;
-  z-index: 5;
+  z-index: 500;
   position: fixed;
+}
+@media (min-width: 0px) and (max-width: 350px) {
+  nav {
+    background-color: #232323;
+  }
 }
 nav h1 {
   align-self: flex-start;
   padding: 10px;
   width: 100%;
 }
-@media (max-width: 375px) {
+@media (min-width: 0px) and (max-width: 600px) {
   nav h1 {
-    font-size: 10vw;
+    font-size: 3rem;
+    width: unset;
   }
 }
 nav h1 a {
@@ -227,12 +232,14 @@ nav ul {
   justify-content: flex-end;
   min-width: 200px;
 }
-@media (max-width: 375px) {
+@media (min-width: 0px) and (max-width: 600px) {
+  nav ul {
+    min-width: 160px;
+  }
+}
+@media (min-width: 0px) and (max-width: 350px) {
   nav ul {
     flex-direction: column;
-    text-align: center;
-    margin-top: -20px;
-    margin-bottom: 17px;
   }
 }
 nav ul li {
@@ -241,20 +248,8 @@ nav ul li {
   border-left: 5px solid #bd3833;
   text-shadow: 1px 1px 5px black;
 }
-@media (max-width: 500px) {
-  nav ul li {
-    font-size: 1.2rem;
-    margin: 0;
-  }
-}
-@media (max-width: 375px) {
-  nav ul li {
-    padding: 10px;
-    margin: 5px;
-  }
-}
 nav ul li .btn {
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0.15);
   color: #ffffff;
   border-radius: 0px;
   font-size: 1.8rem;
@@ -269,38 +264,35 @@ nav ul li .btn {
   margin: 0 5px 0 0;
 }
 nav ul li .btn:hover {
-  color: #bd3833;
-  background-color: #ffffff;
+  color: #ffffff;
+  background-color: #bd3833;
   -webkit-transition-duration: 0.75s;
   -moz-transition-duration: 0.75s;
   transition-duration: 0.75s;
 }
-@media (max-width: 500px) {
+@media (min-width: 0px) and (max-width: 600px) {
   nav ul li .btn {
-    width: 100%;
-    padding: 20px;
+    width: 70%;
+  }
+}
+@media (min-width: 0px) and (max-width: 600px) {
+  nav ul li .btn {
+    font-size: 1.2rem;
+    margin: 0 10px 0 0;
+    padding: 3.7px 15px 3.7px 10px;
   }
 }
 nav ul li a {
   padding: 10px 20px;
 }
-@media (max-width: 500px) {
+@media (min-width: 0px) and (max-width: 600px) {
   nav ul li a {
     padding: 10px 10px;
   }
 }
-@media (max-width: 375px) {
-  nav ul li a {
-    width: 100%;
-    position: fixed;
-    left: 0;
-    text-transform: uppercase;
-    letter-spacing: 0.25rem;
-  }
-}
 footer {
-  color: #9d6a4f;
-  background: #bd3833;
+  color: #454A59;
+  background: #232323;
   padding: 20px 0;
   display: flex;
   justify-content: center;
@@ -319,7 +311,7 @@ footer {
   opacity: 0.92;
   filter: brightness(100%) contrast(90%);
 }
-.splash .splash-image .splash-gradient {
+.splash .splash-image .splash-overlay {
   background: linear-gradient(#000000, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0), rgba(0, 0, 0, 0));
   background-attachment: fixed;
   height: 100%;
@@ -340,11 +332,16 @@ footer {
   border-left: 5px solid #bd3833;
   box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.75);
 }
+@media (min-width: 0px) and (max-width: 600px) {
+  .splash .tagline h2 {
+    width: 80%;
+  }
+}
 .splash .btn {
   display: flex;
   justify-content: center;
   margin: 0 auto;
-  background-color: #F1F1F1;
+  background-color: #ffffff;
   color: #bd3833;
   border-radius: 0px;
   font-size: 1.8rem;
@@ -360,16 +357,15 @@ footer {
   z-index: 1;
 }
 .splash .btn:hover {
-  color: #F1F1F1;
+  color: #ffffff;
   background-color: #bd3833;
   -webkit-transition-duration: 0.75s;
   -moz-transition-duration: 0.75s;
   transition-duration: 0.75s;
 }
-@media (max-width: 500px) {
+@media (min-width: 0px) and (max-width: 600px) {
   .splash .btn {
-    width: 100%;
-    padding: 20px;
+    width: 70%;
   }
 }
 section a.divider {
@@ -400,24 +396,68 @@ section a.divider .leading-arrow:hover {
   background-color: #232323;
   color: #F6F7F8;
   position: relative;
-  padding: 20%;
+  padding: 10% 20%;
 }
-.home .luncher-info p {
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .luncher-info {
+    padding: 10%;
+  }
+}
+@media (min-width: 601px) and (max-width: 820px) {
+  .home .luncher-info {
+    padding: 10%;
+  }
+}
+@media (min-width: 0px) and (max-width: 350px) {
+  .home .luncher-info {
+    padding: 25% 5%;
+  }
+}
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .luncher-info .grid-col-2 {
+    grid-template-columns: 100%;
+    grid-gap: 10px 10px;
+  }
+}
+.home .luncher-info .grid-col-2 p {
   text-align: center;
   align-self: center;
 }
-.home .luncher-info .icon {
+.home .luncher-info .grid-col-2 .icon {
   font-size: 6rem;
 }
-.home .luncher-info .text {
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .luncher-info .grid-col-2 .icon {
+    font-size: 3rem;
+    grid-column: 1;
+  }
+}
+@media (min-width: 601px) and (max-width: 820px) {
+  .home .luncher-info .grid-col-2 .icon {
+    font-size: 4rem;
+  }
+}
+.home .luncher-info .grid-col-2 .text {
   font-size: 2.2rem;
 }
-.home .luncher-info .btn {
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .luncher-info .grid-col-2 .text {
+    font-size: 1.4rem;
+    grid-column: 1;
+    padding-bottom: 20px;
+  }
+}
+@media (min-width: 601px) and (max-width: 820px) {
+  .home .luncher-info .grid-col-2 .text {
+    font-size: 2rem;
+  }
+}
+.home .luncher-info .grid-col-2 .btn {
   grid-column: span 2;
   display: flex;
   justify-content: center;
   margin: 0 auto;
-  background-color: rgba(255, 255, 255, 0);
+  background-color: rgba(255, 255, 255, 0.15);
   color: #ffffff;
   border-radius: 0px;
   font-size: 1.8rem;
@@ -432,24 +472,23 @@ section a.divider .leading-arrow:hover {
   border-left: 5px solid #bd3833;
   z-index: 1;
 }
-.home .luncher-info .btn:hover {
-  color: #bd3833;
-  background-color: #ffffff;
+.home .luncher-info .grid-col-2 .btn:hover {
+  color: #ffffff;
+  background-color: #bd3833;
   -webkit-transition-duration: 0.75s;
   -moz-transition-duration: 0.75s;
   transition-duration: 0.75s;
 }
-@media (max-width: 500px) {
-  .home .luncher-info .btn {
-    width: 100%;
-    padding: 20px;
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .luncher-info .grid-col-2 .btn {
+    width: 70%;
   }
 }
 .home .school-map {
   background-color: #ffec86;
   color: #e54a48;
   position: relative;
-  padding: 10% 0 5%;
+  padding: 5% 0;
 }
 .home .school-map p {
   text-align: center;
@@ -476,27 +515,112 @@ section a.divider .leading-arrow:hover {
   height: 400px;
   font-size: 1rem;
 }
+.home .newsletter {
+  background-image: url("../assets/img/Fruit-bar-pic-Web-USDAgov.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #ffffff;
+}
+.home .newsletter .newsletter-overlay {
+  background: linear-gradient(#000000, rgba(0, 0, 0, 0.5));
+  height: 100%;
+}
+.home .newsletter .newsletter-overlay form {
+  padding: 0 0 20px 0;
+}
+.home .newsletter .newsletter-overlay form .container-form {
+  padding: 5%;
+  margin: 0 auto;
+  text-align: center;
+}
+.home .newsletter .newsletter-overlay form .container-form h3 {
+  color: #ffffff;
+  text-align: center;
+  text-shadow: 1px 1px 5px black;
+}
+.home .newsletter .newsletter-overlay form .container-form p {
+  text-align: center;
+}
+.home .newsletter .newsletter-overlay form .container-form .btn {
+  grid-column: span 2;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.15);
+  color: #ffffff;
+  border-radius: 0px;
+  font-size: 1.8rem;
+  font-weight: bolder;
+  text-align: center;
+  width: 33%;
+  min-width: 100px;
+  padding: 8px 10px;
+  border: 0;
+  text-decoration: none;
+  cursor: pointer;
+  border-left: 5px solid #bd3833;
+  z-index: 1;
+}
+.home .newsletter .newsletter-overlay form .container-form .btn:hover {
+  color: #ffffff;
+  background-color: #bd3833;
+  -webkit-transition-duration: 0.75s;
+  -moz-transition-duration: 0.75s;
+  transition-duration: 0.75s;
+}
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .newsletter .newsletter-overlay form .container-form .btn {
+    width: 70%;
+  }
+}
+.home .newsletter .newsletter-overlay form .container-form input[type=text] {
+  width: 50%;
+  max-width: 600px;
+  padding: 12px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+}
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .newsletter .newsletter-overlay form .container-form input[type=text] {
+    width: 90%;
+  }
+}
 .home .contact {
   background-color: #ae9d27;
   color: #ffffff;
-  padding: 10% 20%;
+  padding: 5% 15%;
+}
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .contact {
+    padding: 5% 5%;
+  }
 }
 .home .contact .grid-col-4 {
   align-items: center;
 }
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .contact .grid-col-4 {
+    grid-template-columns: 10% 80% 10%;
+  }
+}
 .home .contact .grid-col-4 h3 {
   grid-column: span 4;
   text-align: center;
-  color: #ffffff;
+  color: #ffd25d;
+  padding: 0 0 20px 0;
 }
 .home .contact .grid-col-4 .icon,
 .home .contact .grid-col-4 .social {
-  font-size: 4rem;
+  font-size: 2.5rem;
   text-align: center;
+  align-self: baseline;
 }
 .home .contact .grid-col-4 .text,
 .home .contact .grid-col-4 .social-text {
-  font-size: 2.2rem;
+  font-size: 1.8rem;
+  margin-left: 10px;
+  align-self: auto;
 }
 .home .contact .grid-col-4 .icon {
   grid-column: 1;
@@ -510,50 +634,15 @@ section a.divider .leading-arrow:hover {
 .home .contact .grid-col-4 .social-text {
   grid-column: 4;
 }
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .contact .grid-col-4 .social-text {
+    display: none;
+  }
+}
 .home .contact .grid-col-4 a {
   color: #ffffff;
   text-align: center;
-}
-.home .newsletter {
-  background-image: url("../assets/img/Fruit-bar-pic-Web-USDAgov.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  filter: grayscale(50%);
-  color: #ffffff;
-}
-.home .newsletter .container-form {
-  padding: 20px;
-}
-.home .newsletter .container-form h3 {
-  color: #ffffff;
-  text-align: center;
-  text-shadow: 1px 1px 5px black;
-}
-.home .newsletter .container-form p {
-  text-align: center;
-}
-.home .newsletter .container-form input[type=text],
-.home .newsletter .container-form input[type=submit] {
-  width: 100%;
-  padding: 12px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-}
-.home .newsletter .container-form input[type=text] input[type=checkbox],
-.home .newsletter .container-form input[type=submit] input[type=checkbox] {
-  margin-top: 16px;
-}
-.home .newsletter .container-form input[type=submit] {
-  background-color: #bd3833;
-  color: #ffffff;
-  border: none;
-}
-.home .newsletter .container-form input[type=submit]:hover {
-  opacity: 0.8;
-  transition-duration: 0.5s;
+  align-self: baseline;
 }
 /* Add some padding and a grey background color to containers */
 /* Style the input elements and the submit button */
