--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,7 +8,7 @@ nav {
   z-index: 500;
   position: fixed;
   // .sticky-top(0);
-  @media @phone-small {
+  @media @phone {
     background-color: @nav-bg;
   }
   h1 {
