cleaned up assets, small mobile styling updates

--- a/css/index.css
+++ b/css/index.css
@@ -182,7 +182,7 @@ li {
 .grid-col-2 {
   display: grid;
   grid-template-columns: 10% 90%;
-  grid-gap: 50px 10px;
+  grid-gap: 50px 0px;
   max-width: 800px;
   margin: 0 auto;
 }
@@ -302,10 +302,11 @@ footer {
   height: 99%;
 }
 .splash .splash-image {
-  background-image: url("../assets/img/6057054938_d952659baa_o.jpg");
+  background-image: url("../assets/img/6057054938_d952659baa_o-medium.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   height: 100%;
   position: relative;
   opacity: 0.92;
@@ -391,8 +392,12 @@ section a.divider .leading-arrow:hover {
   display: block;
   max-width: unset;
   width: 100%;
+  background-color: #232323;
 }
 .home .luncher-info {
+  transform: rotate(10deg) skew(10deg);
+  width: 100%;
+  left: -0.7%;
   background-color: #232323;
   color: #F6F7F8;
   position: relative;
@@ -400,12 +405,12 @@ section a.divider .leading-arrow:hover {
 }
 @media (min-width: 0px) and (max-width: 600px) {
   .home .luncher-info {
-    padding: 10%;
+    padding: 20%;
   }
 }
 @media (min-width: 601px) and (max-width: 820px) {
   .home .luncher-info {
-    padding: 10%;
+    padding: 20%;
   }
 }
 @media (min-width: 0px) and (max-width: 350px) {
@@ -413,43 +418,14 @@ section a.divider .leading-arrow:hover {
     padding: 25% 5%;
   }
 }
+.home .luncher-info .grid-col-2 {
+  transform: rotate(-9.7deg) skew(-10deg);
+  left: 5%;
+}
 @media (min-width: 0px) and (max-width: 600px) {
   .home .luncher-info .grid-col-2 {
     grid-template-columns: 100%;
     grid-gap: 10px 10px;
-  }
-}
-.home .luncher-info .grid-col-2 p {
-  text-align: center;
-  align-self: center;
-}
-.home .luncher-info .grid-col-2 .icon {
-  font-size: 6rem;
-}
-@media (min-width: 0px) and (max-width: 600px) {
-  .home .luncher-info .grid-col-2 .icon {
-    font-size: 3rem;
-    grid-column: 1;
-  }
-}
-@media (min-width: 601px) and (max-width: 820px) {
-  .home .luncher-info .grid-col-2 .icon {
-    font-size: 4rem;
-  }
-}
-.home .luncher-info .grid-col-2 .text {
-  font-size: 2.2rem;
-}
-@media (min-width: 0px) and (max-width: 600px) {
-  .home .luncher-info .grid-col-2 .text {
-    font-size: 1.4rem;
-    grid-column: 1;
-    padding-bottom: 20px;
-  }
-}
-@media (min-width: 601px) and (max-width: 820px) {
-  .home .luncher-info .grid-col-2 .text {
-    font-size: 2rem;
   }
 }
 .home .luncher-info .grid-col-2 .btn {
@@ -482,6 +458,41 @@ section a.divider .leading-arrow:hover {
 @media (min-width: 0px) and (max-width: 600px) {
   .home .luncher-info .grid-col-2 .btn {
     width: 70%;
+  }
+}
+.home .luncher-info .grid-col-2 p {
+  text-align: center;
+  align-self: center;
+}
+.home .luncher-info .grid-col-2 .icon {
+  font-size: 6rem;
+}
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .luncher-info .grid-col-2 .icon {
+    font-size: 3rem;
+    grid-column: 1;
+  }
+}
+@media (min-width: 601px) and (max-width: 820px) {
+  .home .luncher-info .grid-col-2 .icon {
+    font-size: 4rem;
+  }
+}
+.home .luncher-info .grid-col-2 .text {
+  font-size: 2.2rem;
+  margin-left: 20px;
+}
+@media (min-width: 0px) and (max-width: 600px) {
+  .home .luncher-info .grid-col-2 .text {
+    font-size: 1.4rem;
+    grid-column: 1;
+    padding-bottom: 20px;
+    margin-left: unset;
+  }
+}
+@media (min-width: 601px) and (max-width: 820px) {
+  .home .luncher-info .grid-col-2 .text {
+    font-size: 2rem;
   }
 }
 .home .school-map {
